headers = [
	'config.h',
	'doublefann.h',
	'fann.h',
	'fann_activation.h',
	'fann_cascade.h',
	'fann_cpp.h',
	'fann_data.h',
	'fann_data_cpp.h',
	'fann_error.h',
	'fann_internal.h',
	'fann_io.h',
	'fann_train.h',
	'fann_training_data_cpp.h',
	'fixedfann.h',
	'floatfann.h',
	'parallel_fann.h',
	'parallel_fann.hpp'
]

install_headers(headers)

inc = include_directories('.')
